<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:title="@string/faq"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/cart"
        android:icon="@drawable/cart"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="100"
        android:title="@string/contsct_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:title="@string/location"
        app:showAsAction="never"/>

</menu>