<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_order_history"
        android:orderInCategory="100"
        android:title="@string/order_history"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_user_detail"
        android:orderInCategory="100"
        android:title="USER"
        android:icon="@drawable/logomixed"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_faq_logout"
        android:orderInCategory="100"
        android:title="@string/faq"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cart_logout"
        android:orderInCategory="101"
        android:title="@string/cart"
        android:icon="@drawable/cart"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about_us_logout"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact_us_logout"
        android:orderInCategory="100"
        android:title="@string/contsct_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_location_logout"
        android:orderInCategory="100"
        android:title="@string/location"
        app:showAsAction="never"/>

</menu>